# tauri-notion

./: README.md  index.html  package.json  tsconfig.json  vite.config.ts
src/: App.tsx  defaultSettings.ts  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/api/: gitee.ts
src/axios/: request.ts
src/components/Antd/: EscapeAntd.tsx
src/components/Layout/: LayoutComponent.tsx  LayoutMenuComponent.tsx  LayoutSettingModalComponent.tsx  LayoutUserChangePassword.tsx  LayoutUserSettingComponent.tsx
src/components/Router/: RouterComponent.tsx
src/components/User/: CreateUserModalComponent.tsx
src/pages/dashboard/: index.tsx
src/pages/login/: index.tsx  style.ts
src/redux/: hook.ts  store.ts
src/redux/slice/: breadcrumb.ts  editor.ts  system.ts
src/styles/: dashboard.tsx  global.tsx  layout.ts  user.tsx
src/types/: auth.d.ts  common.d.ts  dict.d.ts  editor.d.ts  gitee.d.ts  global.d.ts  log.d.ts  menu.d.ts  menu.ts  operator.d.ts  role.d.ts  system.d.ts  table.d.ts  user.d.ts
src/utils/: MenuUtil.ts
